--- a/examples/list.html
+++ b/examples/list.html
@@ -26,7 +26,7 @@
          });
 
          document.getElementById('sort-os').onclick = function() {
-            ejs.sort(false);
+            ejs.sort({numeric: false});
          }
       </script>
    </body>
